--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -7,16 +7,17 @@
         <div class="container-fluid">
             <app-breadcumbs></app-breadcumbs>
 
-            <!-- Sistema de rutas-->
-            <div class="row">
+            <!--Sistema de rutas-->
+            <router-outlet></router-outlet>
+
+            <!--<div class="row">
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            <router-outlet></router-outlet>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <!-- ============================================================== -->
